--- a/sass/site/primary/_summary.scss
+++ b/sass/site/primary/_summary.scss
@@ -5,7 +5,7 @@
 .person-form-wrap,
 .person-summary {
   margin: 0 auto;
-  max-width: 400px;
+  max-width: 500px;
   width: 100%;
 }
 
@@ -45,6 +45,8 @@
 }
 
 .person-table-wrap {
+  margin: 0 auto;
+  max-width: 500px;
   th {
     text-align: left;
   }
